# scc450-slm-llm

./: .gitignore  README.md  convert_doc.py  convert_docs.py  convert_docs_v2.py  convert_docs_v3.py  environment.yaml  environment.yml  extract_structured_data.py  gemini_api.py  pyproject.toml  requirements.in  requirements.txt  setup_project.sh  tokenizer notes.txt  tokenizer_doc.py  utils.py
dataset/gemma-dataset/: cache-09def2f9bb3d6c74.arrow  cache-380dcf5ec9a38b72.arrow  cache-3c03b21c50a15700.arrow  cache-5ceb8b3f64f9afb5.arrow  cache-5d45e729a34468c3.arrow  cache-ab7b8fd2c21bd185.arrow  dataset_info.json  state.json
dataset/phi-dataset/: cache-3d100f6bff7bf813.arrow  cache-df0818d861fca775.arrow  dataset_info.json  state.json
fine-tuning/: collator.py  dataset.py  test.py  training_callback.py  tuning.py
gemma tokenized validation checklist/: Validation-checklist data.json
llm_api/: GPT-RAG-example-1.ipynb  Gemini-RAG-example-1.ipynb
phi_validation_checklist/: Validation-checklist data.json
slm_metrics/: QAPair.json  README.md  apllication_list.txt  promt.txt  questions.txt  slm_rag.py
slm_metrics/storage_test/109428-CND-22/: combined.md
slm_metrics/storage_test/109435-CPL-22/: combined.md
slm_metrics/storage_test/109448-CND-22/: combined.md
slm_metrics/storage_test/109461-TPO-22/: combined.md
slm_metrics/storage_test/109479-CND-22/: combined.md
slm_metrics/storage_test/109496-S211-22/: combined.md
slm_metrics/storage_test/109508-NMA-22/: combined.md
slm_metrics/storage_test/109509-CND-22/: combined.md
(+12 files in other folders)
